--- a/prjPOOAngelinoFelipeGilson/nbproject/private/private.properties
+++ b/prjPOOAngelinoFelipeGilson/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Inspiron7559\\AppData\\Roaming\\NetBeans\\10.0\\build.properties
+user.properties.file=C:\\Users\\0030481723015\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
