--- a/prjPOOAngelinoFelipeGilson/nbproject/project.properties
+++ b/prjPOOAngelinoFelipeGilson/nbproject/project.properties
@@ -35,7 +35,8 @@ file.reference.ojdbc6_g.jar=lib\\ojdbc6_g.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc6_g.jar}
+    ${file.reference.ojdbc6_g.jar}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
